필요 패키지 추가 설치

--- a/Dockerfile.u2204
+++ b/Dockerfile.u2204
@@ -1,7 +1,7 @@
 FROM ubuntu:22.04
 
 RUN apt -qq -y update
-RUN apt -qq -y install git
+RUN apt -qq -y install git nc iproute2
 
 WORKDIR /root
 RUN git clone https://github.com/pwndbg/pwndbg
