--- a/vanilla-httpd/docker-compose.yml
+++ b/vanilla-httpd/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.9'
 
 services:
-    vanilla-httpd:
+    web:
         build:
             context: ./
         ports:
           - "80:80"
-        container_name: 'vanilla-httpd'
+        container_name: 'http-srv'
         
